force-app/main/default/objects/OpenAIAPISetting__mdt/OpenAIAPISetting__mdt.object-meta.xml
<CustomObject>
    <label>OpenAI API Setting</label>
    <pluralLabel>OpenAI API Settings</pluralLabel>
</CustomObject>