force-app/main/default/objects/OpenAIAPISetting__mdt/fields/Default_System_Role__c.field-meta.xml
<CustomField>
    <fullName>Default_System_Role__c</fullName>
    <inlineHelpText>Optional parameter if you want to override ChatGPT&apos;s standard system role.

Formatted like &quot;You are a helpful AI Assistant&quot;.</inlineHelpText>
    <label>Default System Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>