force-app/main/default/objects/OpenAIAPISetting__mdt/fields/Default_User_Content__c.field-meta.xml
<CustomField>
    <fullName>Default_User_Content__c</fullName>
    <inlineHelpText>Optional parameter to include prior to whatever data is coded to merge into the prompt</inlineHelpText>
    <label>Default User Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>