force-app/main/default/objects/OpenAIAPISetting__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gpt-3.5-turbo</fullName>
                <default>true</default>
                <label>gpt-3.5-turbo</label>
            </value>
            <value>
                <fullName>gpt-3.5-turbo-16k</fullName>
            </value>
            <value>
                <fullName>gpt-4</fullName>
            </value>
            <value>
                <fullName>gpt-4-32k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>